--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.2",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "alertifyjs": "^1.11.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.7",
+    "ngx-pagination": "^3.2.1",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.0-beta.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
