--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "alertifyjs": "^1.11.2",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.7",
+    "font-awesome": "^4.7.0",
     "ngx-pagination": "^3.2.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0-beta.1",
