--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "node_modules/alertifyjs/build/css/alertify.min.css",
               "node_modules/alertifyjs/build/css/themes/default.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.scss"
+              "src/app/styles/main.scss"
             ],
             "scripts": [
               "node_modules/alertifyjs/build/alertify.min.js"
