--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@types/quill": "^2.0.1",
     "alertifyjs": "^1.11.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
@@ -31,6 +32,7 @@
     "ngx-pagination": "^3.2.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0-beta.1",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
