--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,7 @@
                 }
               ]
             },
-            "production": {
+            "prodenv": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
